clean homecontroller -> homeavatar, bidhandler